--- a/app/styles/lib/map.css
+++ b/app/styles/lib/map.css
@@ -3,15 +3,274 @@ html, body {
   height: 100%;
 }
 
-/* line 3, ../src/map.scss */
+/* line 26, ../src/map.scss */
 .sg-map-container {
   height: 200px;
   width: 100%;
   overflow: hidden;
 }
 
-/* line 9, ../src/map.scss */
+/* line 32, ../src/map.scss */
 #sg-map {
   width: 100%;
   height: 500px;
+}
+
+/* line 116, ../src/map.scss */
+.event-listings {
+  height: calc(100% - 250px);
+  overflow-y: auto;
+}
+
+/* line 121, ../src/map.scss */
+.event-listing {
+  height: 34px;
+  padding: 10px 5px;
+  padding-left: 10px;
+  border-bottom: 1px solid #ccc;
+}
+/* line 87, ../src/map.scss */
+.event-listing.ds-0 .deal-score-container .outer-circle {
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  background-color: #70b009;
+}
+/* line 99, ../src/map.scss */
+.event-listing.ds-0 .deal-score-container .inner-circle {
+  width: 30px;
+  height: 30px;
+  position: relative;
+  top: 2px;
+  left: 2px;
+  border-radius: 50%;
+  color: #3b3b3b;
+  background-color: white;
+}
+/* line 87, ../src/map.scss */
+.event-listing.ds-1 .deal-score-container .outer-circle {
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  background-color: #86b604;
+}
+/* line 99, ../src/map.scss */
+.event-listing.ds-1 .deal-score-container .inner-circle {
+  width: 30px;
+  height: 30px;
+  position: relative;
+  top: 2px;
+  left: 2px;
+  border-radius: 50%;
+  color: #3b3b3b;
+  background-color: white;
+}
+/* line 87, ../src/map.scss */
+.event-listing.ds-2 .deal-score-container .outer-circle {
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  background-color: #8ac306;
+}
+/* line 99, ../src/map.scss */
+.event-listing.ds-2 .deal-score-container .inner-circle {
+  width: 30px;
+  height: 30px;
+  position: relative;
+  top: 2px;
+  left: 2px;
+  border-radius: 50%;
+  color: #3b3b3b;
+  background-color: white;
+}
+/* line 87, ../src/map.scss */
+.event-listing.ds-3 .deal-score-container .outer-circle {
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  background-color: #fdb727;
+}
+/* line 99, ../src/map.scss */
+.event-listing.ds-3 .deal-score-container .inner-circle {
+  width: 30px;
+  height: 30px;
+  position: relative;
+  top: 2px;
+  left: 2px;
+  border-radius: 50%;
+  color: #3b3b3b;
+  background-color: white;
+}
+/* line 87, ../src/map.scss */
+.event-listing.ds-4 .deal-score-container .outer-circle {
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  background-color: #fca553;
+}
+/* line 99, ../src/map.scss */
+.event-listing.ds-4 .deal-score-container .inner-circle {
+  width: 30px;
+  height: 30px;
+  position: relative;
+  top: 2px;
+  left: 2px;
+  border-radius: 50%;
+  color: #3b3b3b;
+  background-color: white;
+}
+/* line 87, ../src/map.scss */
+.event-listing.ds-5 .deal-score-container .outer-circle {
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  background-color: #fe9549;
+}
+/* line 99, ../src/map.scss */
+.event-listing.ds-5 .deal-score-container .inner-circle {
+  width: 30px;
+  height: 30px;
+  position: relative;
+  top: 2px;
+  left: 2px;
+  border-radius: 50%;
+  color: #3b3b3b;
+  background-color: white;
+}
+/* line 87, ../src/map.scss */
+.event-listing.ds-6 .deal-score-container .outer-circle {
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  background-color: #fb6c6c;
+}
+/* line 99, ../src/map.scss */
+.event-listing.ds-6 .deal-score-container .inner-circle {
+  width: 30px;
+  height: 30px;
+  position: relative;
+  top: 2px;
+  left: 2px;
+  border-radius: 50%;
+  color: #3b3b3b;
+  background-color: white;
+}
+/* line 87, ../src/map.scss */
+.event-listing.ds-7 .deal-score-container .outer-circle {
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  background-color: #4ba2f1;
+}
+/* line 99, ../src/map.scss */
+.event-listing.ds-7 .deal-score-container .inner-circle {
+  width: 30px;
+  height: 30px;
+  position: relative;
+  top: 2px;
+  left: 2px;
+  border-radius: 50%;
+  color: #3b3b3b;
+  background-color: white;
+}
+/* line 135, ../src/map.scss */
+.event-listing .circle-text {
+  -webkit-font-smoothing: subpixel-antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font: 400 15px "Helvetica Neue", Arial, Helvetica, sans-serif;
+  line-height: 100%;
+  padding-top: 8px;
+  text-align: center;
+}
+/* line 141, ../src/map.scss */
+.event-listing .deal-score-container {
+  float: left;
+}
+/* line 146, ../src/map.scss */
+.event-listing .event-detail {
+  width: 115px;
+  padding-top: 3px;
+  padding-left: 10px;
+  float: left;
+}
+/* line 153, ../src/map.scss */
+.event-listing .event-location {
+  -webkit-font-smoothing: subpixel-antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font: 500 14px "Helvetica Neue", Arial, Helvetica, sans-serif;
+  line-height: 100%;
+  width: 130px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  padding-bottom: 3px;
+  color: #3b3b3b;
+}
+/* line 160, ../src/map.scss */
+.event-listing .event-tickets {
+  -webkit-font-smoothing: subpixel-antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font: 400 13px "Helvetica Neue", Arial, Helvetica, sans-serif;
+  line-height: 100%;
+  color: #868686;
+}
+/* line 165, ../src/map.scss */
+.event-listing .seller-logo-container {
+  padding-top: 2px;
+  float: left;
+}
+/* line 170, ../src/map.scss */
+.event-listing .seller-logo {
+  width: 55px;
+  height: 32px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+/* line 176, ../src/map.scss */
+.event-listing .ticket-price {
+  float: left;
+  padding-left: 10px;
+  padding-top: 10px;
+  -webkit-font-smoothing: subpixel-antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font: 400 13px "Helvetica Neue", Arial, Helvetica, sans-serif;
+  line-height: 100%;
+}
+/* line 182, ../src/map.scss */
+.event-listing .buy-arrow-container {
+  float: right;
+  padding-right: 10px;
+  transform: rotate(90deg);
+}
+/* line 187, ../src/map.scss */
+.event-listing .buy-arrow {
+  padding: 15px 5px 0px 15px;
+}
+/* line 42, ../src/map.scss */
+.event-listing .buy-arrow .arrow {
+  width: 3px;
+  height: 10px;
+  background-color: #0066c3;
+  border-right: none;
+  border-bottom: none;
+  position: relative;
+  border-radius: 2px;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+/* line 54, ../src/map.scss */
+.event-listing .buy-arrow .arrow::after {
+  content: "";
+  width: 3px;
+  top: -5px;
+  left: 4px;
+  display: block;
+  height: 10px;
+  background-color: #0066c3;
+  border-right: none;
+  border-bottom: none;
+  position: relative;
+  border-radius: 2px;
+  -webkit-transform: rotate(270deg);
+  transform: rotate(270deg);
 }
