--- a/app/styles/lib/main.css
+++ b/app/styles/lib/main.css
@@ -2,6 +2,10 @@
 body {
 }
 
+a {
+  text-decoration: none;
+}
+
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
