Style my performers tab

--- a/app/styles/src/performer.scss
+++ b/app/styles/src/performer.scss
@@ -7,7 +7,7 @@ $performerSplashHeight: 140px;
   width: 100%;
   .photo {
     background-size: cover;
-    background-position: top;
+    background-position: center;
     width: 100%;
     height: $performerSplashHeight;
   }
