--- a/app/styles/lib/explore.css
+++ b/app/styles/lib/explore.css
@@ -23,16 +23,17 @@ body {
   z-index: 100;
 }
 
-/* line 24, ../src/explore.scss */
+/* line 25, ../src/explore.scss */
 .explore-header img,
-.myevents-header img {
+.myevents-header img,
+.myperformers-header img {
   width: 22px;
   position: absolute;
   right: 15px;
   top: 14px;
 }
 
-/* line 31, ../src/explore.scss */
+/* line 32, ../src/explore.scss */
 .sg-footer {
   position: absolute;
   bottom: 0;
@@ -41,7 +42,7 @@ body {
   width: 100%;
   background-color: #fff;
 }
-/* line 39, ../src/explore.scss */
+/* line 40, ../src/explore.scss */
 .sg-footer .footer-icon {
   width: 20%;
   height: 44px;
@@ -49,11 +50,11 @@ body {
   border-right: 1px solid #b3c0cc;
   float: left;
 }
-/* line 46, ../src/explore.scss */
+/* line 47, ../src/explore.scss */
 .sg-footer .footer-icon:last-child {
   border-right: 0;
 }
-/* line 50, ../src/explore.scss */
+/* line 51, ../src/explore.scss */
 .sg-footer .footer-icon .icon {
   width: 26px;
   height: 26px;
@@ -62,79 +63,79 @@ body {
   background-size: contain;
   background-repeat: no-repeat;
 }
-/* line 60, ../src/explore.scss */
+/* line 61, ../src/explore.scss */
 .sg-footer .footer-icon .explore-icon {
   background-image: url(/images/explore.png);
 }
-/* line 60, ../src/explore.scss */
+/* line 61, ../src/explore.scss */
 .sg-footer .footer-icon .search-icon {
   background-image: url(/images/search.png);
 }
-/* line 60, ../src/explore.scss */
+/* line 61, ../src/explore.scss */
 .sg-footer .footer-icon .events-icon {
   background-image: url(/images/events.png);
 }
-/* line 60, ../src/explore.scss */
+/* line 61, ../src/explore.scss */
 .sg-footer .footer-icon .performers-icon {
   background-image: url(/images/performers.png);
 }
-/* line 60, ../src/explore.scss */
+/* line 61, ../src/explore.scss */
 .sg-footer .footer-icon .settings-icon {
   background-image: url(/images/settings.png);
 }
-/* line 65, ../src/explore.scss */
+/* line 66, ../src/explore.scss */
 .sg-footer .footer-icon.selected {
   border-bottom: 3px solid #2666b1;
 }
-/* line 68, ../src/explore.scss */
+/* line 69, ../src/explore.scss */
 .sg-footer .footer-icon.selected .explore-icon {
   background-image: url(/images/explore-active.png);
 }
-/* line 68, ../src/explore.scss */
+/* line 69, ../src/explore.scss */
 .sg-footer .footer-icon.selected .search-icon {
   background-image: url(/images/search-active.png);
 }
-/* line 68, ../src/explore.scss */
+/* line 69, ../src/explore.scss */
 .sg-footer .footer-icon.selected .events-icon {
   background-image: url(/images/events-active.png);
 }
-/* line 68, ../src/explore.scss */
+/* line 69, ../src/explore.scss */
 .sg-footer .footer-icon.selected .performers-icon {
   background-image: url(/images/performers-active.png);
 }
-/* line 68, ../src/explore.scss */
+/* line 69, ../src/explore.scss */
 .sg-footer .footer-icon.selected .settings-icon {
   background-image: url(/images/settings-active.png);
 }
 
-/* line 76, ../src/explore.scss */
+/* line 77, ../src/explore.scss */
 .container {
   width: 100%;
   height: calc(100% - 44px);
   overflow-y: hidden;
   -webkit-overflow-scrolling: touch;
 }
-/* line 82, ../src/explore.scss */
+/* line 83, ../src/explore.scss */
 .container .explore-view {
   height: calc(100% - 39px);
   overflow-y: auto;
 }
 
-/* line 90, ../src/explore.scss */
+/* line 91, ../src/explore.scss */
 .explore-cell-container {
   position: relative;
   background: #333;
   height: 205px;
   width: 100%;
 }
-/* line 95, ../src/explore.scss */
+/* line 96, ../src/explore.scss */
 .explore-cell-container .photo {
   background-size: cover;
   background-position: center;
   width: 100%;
   height: 205px;
 }
-/* line 101, ../src/explore.scss */
+/* line 102, ../src/explore.scss */
 .explore-cell-container .photo-overlay {
   height: 205px;
   width: 100%;
@@ -156,7 +157,7 @@ body {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#bd000000',GradientType=0 );
   /* IE6-9 */
 }
-/* line 115, ../src/explore.scss */
+/* line 116, ../src/explore.scss */
 .explore-cell-container .heart {
   background: url(/images/unfilled-heart.png);
   background-size: 23px 21px;
@@ -166,47 +167,34 @@ body {
   top: 18px;
   right: 18px;
 }
-/* line 124, ../src/explore.scss */
+/* line 125, ../src/explore.scss */
 .explore-cell-container .heart.filled {
   background: url(/images/filled-heart.png);
   background-size: 23px 21px;
 }
-/* line 128, ../src/explore.scss */
+/* line 129, ../src/explore.scss */
 .explore-cell-container .event-info {
   position: absolute;
   bottom: 18px;
   left: 18px;
 }
-/* line 132, ../src/explore.scss */
+/* line 133, ../src/explore.scss */
 .explore-cell-container .event-info h2, .explore-cell-container .event-info h5 {
   -webkit-font-smoothing: subpixel-antialiased;
   -moz-osx-font-smoothing: grayscale;
   font: 100 24px "HelveticaNeue-UltraLight", "Helvetica Neue Ultra Light", "Helvetica Neue", Arial, Helvetica, sans-serif;
   line-height: 100%;
+  font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
   letter-spacing: 1px;
   color: white;
   margin-bottom: 3px;
 }
-/* line 138, ../src/explore.scss */
+/* line 140, ../src/explore.scss */
 .explore-cell-container .event-info h5 {
   -webkit-font-smoothing: subpixel-antialiased;
   -moz-osx-font-smoothing: grayscale;
   font: 100 13px "HelveticaNeue-UltraLight", "Helvetica Neue Ultra Light", "Helvetica Neue", Arial, Helvetica, sans-serif;
   line-height: 100%;
+  font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
   color: #EEE;
-}
-/* line 143, ../src/explore.scss */
-.explore-cell-container .heart {
-  background: url(/images/unfilled-heart.png);
-  background-size: 23px 21px;
-  width: 23px;
-  height: 21px;
-  position: absolute;
-  top: 18px;
-  right: 18px;
-}
-/* line 152, ../src/explore.scss */
-.explore-cell-container .heart.filled {
-  background: url(/images/filled-heart.png);
-  background-size: 23px 21px;
 }
