--- a/app/styles/lib/performer.css
+++ b/app/styles/lib/performer.css
@@ -8,7 +8,7 @@
 /* line 8, ../src/performer.scss */
 .performer-splash-container .photo {
   background-size: cover;
-  background-position: top;
+  background-position: center;
   width: 100%;
   height: 140px;
 }
