Add login screen, begin tab bar logic

--- a/app/styles/src/explore.scss
+++ b/app/styles/src/explore.scss
@@ -22,7 +22,8 @@ $mobileGrayBorder: 1px solid #b3c0cc;
 
 .explore-header img,
 .myevents-header img,
-.myperformers-header img {
+.myperformers-header img,
+.settings-header {
   width: 22px;
   position: absolute;
   right: 15px;
