--- a/app/views/myperformers.html
+++ b/app/views/myperformers.html
@@ -42,39 +42,39 @@
     </div>
   </li>
   <li>
-    <div class="photo" style="background-image: url(http://cdn.chairnerd.com/images/performers-landscape/bruce-springsteen-7f0bf6/4275/huge.jpg)"></div>
+    <div class="photo" style="background-image: url(http://cdn.chairnerd.com/images/performers-landscape/cleveland-cavaliers-94c2e3/2094/huge.jpg)"></div>
     <div class="photo-overlay"></div>
     <div class="heart filled"></div>
     <div class="performer-info">
-      <h2>Bruce Springsteen</h2>
-      <h5>12 events</h5>
+      <h2>Cleveland Cavaliers</h2>
+      <h5>6 events</h5>
     </div>
   </li>
     <li>
-    <div class="photo" style="background-image: url(http://cdn.chairnerd.com/images/performers-landscape/passion-pit-4c04ae/1393/huge.jpg)"></div>
+    <div class="photo" style="background-image: url(http://cdn.chairnerd.com/images/performers-landscape/the-book-of-mormon-4ba7dc/7829/huge.jpg)"></div>
     <div class="photo-overlay"></div>
     <div class="heart filled"></div>
     <div class="performer-info">
-      <h2>MGMT</h2>
-      <h5>3 events</h5>
+      <h2>The Book of Mormon - New York</h2>
+      <h5>78 events</h5>
     </div>
   </li>
   <li>
-    <div class="photo" style="background-image: url(http://cdn.chairnerd.com/images/performers-landscape/passion-pit-4c04ae/1393/huge.jpg)"></div>
+    <div class="photo" style="background-image: url(http://cdn.chairnerd.com/images/performers-landscape/cleveland-browns-42b416/2073/huge.jpg)"></div>
     <div class="photo-overlay"></div>
     <div class="heart filled"></div>
     <div class="performer-info">
-      <h2>Passion Pit</h2>
-      <h5>3 events</h5>
+      <h2>Cleveland Browns</h2>
+      <h5>No upcoming events</h5>
     </div>
   </li>
   <li>
-    <div class="photo" style="background-image: url(http://cdn.chairnerd.com/images/performers-landscape/bruno-mars-2dca42/6148/huge.jpg)"></div>
+    <div class="photo" style="background-image: url(http://cdn.chairnerd.com/images/performers-landscape/billy-joel-ca1b65/303/huge.jpg)"></div>
     <div class="photo-overlay"></div>
     <div class="heart filled"></div>
     <div class="performer-info">
-      <h2>Bruno Mars</h2>
-      <h5>3 events</h5>
+      <h2>Billy Joel</h2>
+      <h5>11 events</h5>
     </div>
   </li>
 </ul>
