--- a/app/styles/lib/explore.css
+++ b/app/styles/lib/explore.css
@@ -23,17 +23,18 @@ body {
   z-index: 100;
 }
 
-/* line 25, ../src/explore.scss */
+/* line 26, ../src/explore.scss */
 .explore-header img,
 .myevents-header img,
-.myperformers-header img {
+.myperformers-header img,
+.settings-header {
   width: 22px;
   position: absolute;
   right: 15px;
   top: 14px;
 }
 
-/* line 32, ../src/explore.scss */
+/* line 33, ../src/explore.scss */
 .sg-footer {
   position: absolute;
   bottom: 0;
@@ -42,7 +43,7 @@ body {
   width: 100%;
   background-color: #fff;
 }
-/* line 40, ../src/explore.scss */
+/* line 41, ../src/explore.scss */
 .sg-footer .footer-icon {
   width: 20%;
   height: 44px;
@@ -50,11 +51,11 @@ body {
   border-right: 1px solid #b3c0cc;
   float: left;
 }
-/* line 47, ../src/explore.scss */
+/* line 48, ../src/explore.scss */
 .sg-footer .footer-icon:last-child {
   border-right: 0;
 }
-/* line 51, ../src/explore.scss */
+/* line 52, ../src/explore.scss */
 .sg-footer .footer-icon .icon {
   width: 26px;
   height: 26px;
@@ -63,79 +64,79 @@ body {
   background-size: contain;
   background-repeat: no-repeat;
 }
-/* line 61, ../src/explore.scss */
+/* line 62, ../src/explore.scss */
 .sg-footer .footer-icon .explore-icon {
   background-image: url(/images/explore.png);
 }
-/* line 61, ../src/explore.scss */
+/* line 62, ../src/explore.scss */
 .sg-footer .footer-icon .search-icon {
   background-image: url(/images/search.png);
 }
-/* line 61, ../src/explore.scss */
+/* line 62, ../src/explore.scss */
 .sg-footer .footer-icon .events-icon {
   background-image: url(/images/events.png);
 }
-/* line 61, ../src/explore.scss */
+/* line 62, ../src/explore.scss */
 .sg-footer .footer-icon .performers-icon {
   background-image: url(/images/performers.png);
 }
-/* line 61, ../src/explore.scss */
+/* line 62, ../src/explore.scss */
 .sg-footer .footer-icon .settings-icon {
   background-image: url(/images/settings.png);
 }
-/* line 66, ../src/explore.scss */
+/* line 67, ../src/explore.scss */
 .sg-footer .footer-icon.selected {
   border-bottom: 3px solid #2666b1;
 }
-/* line 69, ../src/explore.scss */
+/* line 70, ../src/explore.scss */
 .sg-footer .footer-icon.selected .explore-icon {
   background-image: url(/images/explore-active.png);
 }
-/* line 69, ../src/explore.scss */
+/* line 70, ../src/explore.scss */
 .sg-footer .footer-icon.selected .search-icon {
   background-image: url(/images/search-active.png);
 }
-/* line 69, ../src/explore.scss */
+/* line 70, ../src/explore.scss */
 .sg-footer .footer-icon.selected .events-icon {
   background-image: url(/images/events-active.png);
 }
-/* line 69, ../src/explore.scss */
+/* line 70, ../src/explore.scss */
 .sg-footer .footer-icon.selected .performers-icon {
   background-image: url(/images/performers-active.png);
 }
-/* line 69, ../src/explore.scss */
+/* line 70, ../src/explore.scss */
 .sg-footer .footer-icon.selected .settings-icon {
   background-image: url(/images/settings-active.png);
 }
 
-/* line 77, ../src/explore.scss */
+/* line 78, ../src/explore.scss */
 .container {
   width: 100%;
   height: calc(100% - 44px);
   overflow-y: hidden;
   -webkit-overflow-scrolling: touch;
 }
-/* line 83, ../src/explore.scss */
+/* line 84, ../src/explore.scss */
 .container .explore-view {
   height: calc(100% - 39px);
   overflow-y: auto;
 }
 
-/* line 91, ../src/explore.scss */
+/* line 92, ../src/explore.scss */
 .explore-cell-container {
   position: relative;
   background: #333;
   height: 205px;
   width: 100%;
 }
-/* line 96, ../src/explore.scss */
+/* line 97, ../src/explore.scss */
 .explore-cell-container .photo {
   background-size: cover;
   background-position: center;
   width: 100%;
   height: 205px;
 }
-/* line 102, ../src/explore.scss */
+/* line 103, ../src/explore.scss */
 .explore-cell-container .photo-overlay {
   height: 205px;
   width: 100%;
@@ -157,7 +158,7 @@ body {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#bd000000',GradientType=0 );
   /* IE6-9 */
 }
-/* line 116, ../src/explore.scss */
+/* line 117, ../src/explore.scss */
 .explore-cell-container .heart {
   background: url(/images/unfilled-heart.png);
   background-size: 23px 21px;
@@ -167,18 +168,18 @@ body {
   top: 18px;
   right: 18px;
 }
-/* line 125, ../src/explore.scss */
+/* line 126, ../src/explore.scss */
 .explore-cell-container .heart.filled {
   background: url(/images/filled-heart.png);
   background-size: 23px 21px;
 }
-/* line 129, ../src/explore.scss */
+/* line 130, ../src/explore.scss */
 .explore-cell-container .event-info {
   position: absolute;
   bottom: 18px;
   left: 18px;
 }
-/* line 133, ../src/explore.scss */
+/* line 134, ../src/explore.scss */
 .explore-cell-container .event-info h2, .explore-cell-container .event-info h5 {
   -webkit-font-smoothing: subpixel-antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -189,7 +190,7 @@ body {
   color: white;
   margin-bottom: 3px;
 }
-/* line 140, ../src/explore.scss */
+/* line 141, ../src/explore.scss */
 .explore-cell-container .event-info h5 {
   -webkit-font-smoothing: subpixel-antialiased;
   -moz-osx-font-smoothing: grayscale;
