--- a/app/views/myevents.html
+++ b/app/views/myevents.html
@@ -4,7 +4,7 @@
     <img src="/images/search-white.png">
   </a>
 </header>
-<ul id="tracked-events">
+<ul id="tracked-events"> 
   <li>
     <div class="performer-image-container">
       <div class="performer-image" style="background-image: url(http://cdn.chairnerd.com/images/performers/1239/mgmt-1d7484/medium.jpg)"></div>
@@ -14,21 +14,33 @@
       <h4>MGMT with Wye Oak</h4>
       <h5>Sat, Apr 4 at Bowery Ballroom</h5>
       <div></div>
-      <h5 class="available-from">From $212</h5>
+      <h5 class="available-from">From $82</h5>
     </div>
   </li>
   <li>
     <div class="performer-image-container">
-      <div class="performer-image" style="background-image:"></div>
+      <div class="performer-image" style="background-image: url(http://cdn.chairnerd.com/images/performers/303/billy-joel-7e02a8/medium.jpg)"></div>
     </div>
     <div class="event-details">
       <div class="heart"></div>
-      <h4>MGMT with Wye Oak</h4>
-      <h5>Sat, Apr 4 at Bowery Ballroom</h5>
+      <h4>Billy Joel</h4>
+      <h5>Sat, Apr 28 at Madison Square Garden</h5>
       <div></div>
-      <h5 class="available-from no-tickets">No tickets yet</h5>
+      <h5 class="available-from">From $263</h5>
     </div>
   </li>
+  <li>
+    <div class="performer-image-container">
+      <div class="performer-image" style="background-image: url(http://cdn.chairnerd.com/images/performers/2094/cleveland-cavaliers-4747bc/medium.jpg)"></div>
+    </div>
+    <div class="event-details">
+      <div class="heart"></div>
+      <h4>Nets at Cavaliers</h4>
+      <h5>Fri, Mar 28 at Quicken Loans Arena</h5>
+      <div></div>
+      <h5 class="available-from">From $12</h5>
+    </div>
+  </li> 
   <li>
     <div class="performer-image-container">
       <div class="performer-image" style="background-image: url(http://cdn.chairnerd.com/images/performers/1393/passion-pit-e6679b/medium.jpg)"></div>
@@ -38,7 +50,19 @@
       <h4>Passion Pit With The Killers Test a Long Title</h4>
       <h5>Sat, Apr 4 at Bowery Ballroom Test a Long Venue Name</h5>
       <div></div>
-      <h5 class="available-from">From $212</h5>
+      <h5 class="available-from">From $46</h5>
+    </div>
+  </li>
+  <li>
+    <div class="performer-image-container">
+      <div class="performer-image" style="background-image:"></div>
+    </div>
+    <div class="event-details">
+      <div class="heart"></div>
+      <h4>Michael Franti & Spearhead</h4>
+      <h5>Sat, Apr 4 at Bowery Ballroom</h5>
+      <div></div>
+      <h5 class="available-from no-tickets">No tickets yet</h5>
     </div>
   </li>
 </ul>
