--- a/app/views/map.html
+++ b/app/views/map.html
@@ -8,7 +8,7 @@
   There is no map available for this event.
 </div>
 <div class="event-listings" ng-show="hasListings" >
-  <div class="event-listing ds-1" ng-repeat="listing in listingsData.listings">
+  <div class="event-listing ds-1" ng-repeat="listing in listings">
     <div class="deal-score-container">
       <div class="outer-circle">
         <div class="inner-circle">
