--- a/app/styles/src/map.scss
+++ b/app/styles/src/map.scss
@@ -122,7 +122,7 @@ $omniboxSubFontColor: #868686;
   height: 34px;
   padding: 10px 5px;
   padding-left: 10px;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 4px double black;
 
   @for $i from 1 through length($dealColors) {
     // Empty Circles
